--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "typeface-roboto": "^1.1.13",
     "url-join": "^4.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
