--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "js-file-download": "^0.4.12",
+    "mime-types": "^2.1.31",
+    "moment": "^2.29.1",
     "typeface-roboto": "^1.1.13",
     "url-join": "^4.0.1",
     "vue": "^2.6.11",
@@ -27,8 +32,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.2.0",
     "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
