--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-axios": "^3.2.4",
     "vue-gtag": "^1.16.1",
     "vue-router": "^3.2.0",
+    "vue-tour": "^2.0.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
