--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": { "no-debugger": "off"}
+    "rules": { "no-debugger": "off","@typescript-eslint/no-explicit-any": "off" }
   },
   "browserslist": [
     "> 1%",
