--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "dexie": "^3.0.3",
     "js-file-download": "^0.4.12",
     "jwt-decode": "^3.1.2",
     "mime-types": "^2.1.31",
