Alteração temporária de senha

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,3 +1,3 @@
-VUE_APP_API_BASE_URL=http://0.0.0.0:8000/
+VUE_APP_API_BASE_URL=https://app.e-licencie.com.br/
 VUE_APP_TESTE_EMAIL=treinamento@e-licencie.com.br
-VUE_APP_TESTE_SENHA=suporte@000000
+VUE_APP_TESTE_SENHA=123456
